examples/datalog/18_advanced_patterns/107_graph_degree.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_degree
Knowledge graph 'test_degree' created.
Switched to knowledge graph: test_degree
> .kg use test_degree
Switched to knowledge graph: test_degree
> +edge[("a", "b"), ("a", "c"), ("b", "c"), ("c", "d")].
Inserted 4 fact(s) into 'edge'.
> out_degree(Node, <COUNT:Target>) :- edge(Node, Target).
Script error: Parse error: Unknown aggregate function: 
